[gd_scene load_steps=13 format=3 uid="uid://cp0t033vpt106"]

[ext_resource type="Script" path="res://src/scenes/screens/gaming_screen/gaming_screen.gd" id="1_x84yc"]
[ext_resource type="Texture2D" uid="uid://cuoxjfuujcmx8" path="res://sprites/blank_card.svg" id="2_c4yte"]
[ext_resource type="SystemFont" uid="uid://rkc8yxs31ntr" path="res://fonts/default.tres" id="3_0ev7o"]
[ext_resource type="PackedScene" uid="uid://d3m8qypqmllbp" path="res://src/scenes/components/card_animations/boomerang_animation/boomerang_animation.tscn" id="4_irduj"]
[ext_resource type="PackedScene" uid="uid://xnququwd15w3" path="res://src/scenes/components/card_animations/summon_animation/summon_animation.tscn" id="5_fkrco"]
[ext_resource type="PackedScene" uid="uid://cjqlpl5ur4xb8" path="res://src/scenes/components/card_animations/slot_machine_animation/slot_machine_animation.tscn" id="6_3t5k1"]
[ext_resource type="PackedScene" uid="uid://beeltynhtnfhh" path="res://src/scenes/components/card_animations/flip_animation/flip_animation.tscn" id="7_a7j41"]

[sub_resource type="Animation" id="Animation_slt3n"]
resource_name = "HIDE_ALL"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/Question:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/Answer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k3vxl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/Question:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/Answer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wdsmn"]
resource_name = "SHOW_ANSWER"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/Answer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ktfw2"]
resource_name = "SHOW_QUESTION"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/Question:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skqla"]
_data = {
"HIDE_ALL": SubResource("Animation_slt3n"),
"RESET": SubResource("Animation_k3vxl"),
"SHOW_ANSWER": SubResource("Animation_wdsmn"),
"SHOW_QUESTION": SubResource("Animation_ktfw2")
}

[node name="GamingScreen" type="Node2D" node_paths=PackedStringArray("action_button", "question_text", "answer_text", "animation_player")]
script = ExtResource("1_x84yc")
action_button = NodePath("CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Action")
question_text = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer/Question")
answer_text = NodePath("CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2/Answer")
animation_player = NodePath("AnimationPlayer")

[node name="Deck" type="Sprite2D" parent="."]
position = Vector2(1052, 324)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_c4yte")

[node name="Deck" type="Sprite2D" parent="Deck"]
position = Vector2(-10, -10)
texture = ExtResource("2_c4yte")

[node name="Deck" type="Sprite2D" parent="Deck/Deck"]
position = Vector2(-10, -10)
texture = ExtResource("2_c4yte")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_0ev7o")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Action" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_0ev7o")
theme_override_font_sizes/font_size = 32
text = "Draw"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Question" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("3_0ev7o")
theme_override_font_sizes/font_size = 32
text = "Question"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Answer" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/MarginContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 32
theme_override_fonts/font = ExtResource("3_0ev7o")
theme_override_font_sizes/font_size = 32
text = "Answer"
horizontal_alignment = 1

[node name="BoomerangAnimation" parent="." instance=ExtResource("4_irduj")]
position = Vector2(576, 324)

[node name="SummonAnimation" parent="." instance=ExtResource("5_fkrco")]
position = Vector2(576, 324)

[node name="SlotMachineAnimation" parent="." instance=ExtResource("6_3t5k1")]
position = Vector2(576, 324)

[node name="FlipAnimation" parent="." instance=ExtResource("7_a7j41")]
position = Vector2(576, 324)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_skqla")
}

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="change_to_deck_selection_screen"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Action" to="." method="on_action_button_pressed"]
